<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_app_name">曹珺的大杂烩</string>
    <string name="qrcode_hint">请输入文字后点击图片刷新</string>
    <string name="qrcode_title">二维码表白</string>
    <string name="qrcode_save">保存二维码图片到%1$s%2$s。</string>
    <string name="successed">成功</string>
    <string name="failed">失败</string>
    <string name="start_color">起始颜色</string>
    <string name="end_color">结束颜色</string>
    <string name="color_title">渐变色</string>
    <string name="red_hint">R</string>
    <string name="green_hint">G</string>
    <string name="blue_hint">B</string>
    <string name="hex">16进制</string>
    <string name="qrcode_size">宽×高</string>
    <string name="qrcode_width">宽</string>
    <string name="qrcode_height">高</string>
    <string name="qrcode_char">×</string>
    <string name="color_save">保存渐变色图片到%1$s%2$s。</string>
    <string name="bankcard_title">非接银行卡</string>
    <string name="nfc_status">NFC 开/关</string>
    <string name="dpi">dpi</string>
    <string name="zxing_title">扫码</string>
    <string name="string_title">字符串转换</string>
    <string name="input_string">输入值</string>
    <string name="output_string">输出值</string>
    <string name="secure_title">加/解密</string>
    <string name="key">密钥</string>
    <string name="public_key">公钥</string>
    <string name="private_key">私钥</string>
    <string name="gen_key_pair">生成公私钥对</string>
    <string name="key_pair">公私钥对</string>
    <string name="verify_result">验签结果：</string>
    <string name="rxjava_title">RxJava</string>
    <string name="ai_title">傻瓜AI</string>
    <string name="ai_word">%1$s：%2$s</string>
    <string name="textart_title">文字艺术</string>
    <string name="passwordstore_title">密码仓库</string>
    <string name="ps_detail_title">密码详情</string>
    <string name="ps_company">网站/银行</string>
    <string name="ps_url">网址</string>
    <string name="ps_account">账号</string>
    <string name="ps_password_type">密码类型</string>
    <string name="ps_password_length">密码长度</string>
    <string name="ps_password">密码</string>
    <string name="ps_add">添加</string>
    <string name="ps_delete">删除</string>
    <string name="ps_save">保存</string>

    <!-- Gesture login activity -->
    <string name="gesture_login_title">手势密码登录</string>
    <string name="gesture_forget_gesture">忘记手势密码</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">手势密码输入错误</string>
    <string name="gesture_correct">输入正确</string>

    <!-- Create gesture activity -->
    <string name="create_gesture_title">设置手势密码</string>
    <string name="create_gesture_default">绘制解锁图案</string>
    <string name="create_gesture_correct">再次绘制解锁图案</string>
    <string name="create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>m
    <string name="create_gesture_confirm_correct">设置成功</string>
    <string name="create_gesture_reset">重新设置</string>

    <!-- 的士数 -->
    <string name="taxicab_title">的士数</string>
    <string name="cb_ta_ca">正整数</string>
    <string name="cb_pd_title">计算的士数</string>
    <string name="cb_pd_message">计算中……</string>

    <!-- 血压 -->
    <string name="bp_title">血压记录</string>
    <string name="bp_detail_title">血压记录详情</string>
    <string name="bp_time">时间</string>
    <string name="bp_high">高压（收缩压）</string>
    <string name="bp_low">低压（舒张压）</string>
    <string name="bp_pulse">脉搏</string>
    <string name="bp_device">设备</string>
    <string name="bp_all">全部</string>
    <string name="bp_bloodpressure">血压</string>
    <string name="bp_medicine">服药</string>
    <string name="bp_weight">体重</string>
    <string name="bp_left">左手</string>
    <string name="bp_right">右手</string>
    <string name="bp_weight_unit">%s公斤</string>
    <string name="bp_export">导出</string>

    <!-- 摄像头取色 -->
    <string name="cc_title">摄像头取色</string>
    <string name="cc_camera_error">摄像头开启失败</string>
    <string name="cc_configure_failed">摄像头配置失败</string>

    <!-- 系统信息 -->
    <string name="si_title">系统信息</string>

    <!-- 共享箱 -->
    <string name="sc_title">共享箱</string>
    <string name="sc_user_title">共享箱用户</string>
    <string name="sc_user_detail_title">共享箱用户详情</string>
    <string name="sc_sharecase_title">共享箱</string>
    <string name="sc_sharecase_detail_title">共享箱详情</string>
    <string name="sc_order_title">共享箱订单</string>
    <string name="sc_order_detail_title">订单详情</string>
    <string name="sc_user_name">用户名</string>
    <string name="sc_user_type">类型</string>
    <string name="sc_user_income">收入</string>
    <string name="sc_user_expend">支出</string>
    <string name="sc_relate_sharecase">相关共享箱</string>
    <string name="sc_relate_order">相关订单</string>
    <string name="sc_sharecase_name">物品名</string>
    <string name="sc_deposit">押金</string>
    <string name="sc_rent">租金</string>
    <string name="sc_commission">服务费（0-100%）</string>
    <string name="sc_time_start">起始时间</string>
    <string name="sc_time_end">结束时间</string>
    <string name="sc_time_days">总天数</string>
    <string name="sc_host">物品所有人</string>
    <string name="sc_sharecase_id">共享箱ID</string>
    <string name="sc_user">物品使用人</string>
    <string name="sc_previous">上一笔</string>
    <string name="sc_next">下一笔</string>
    <string name="sc_submit">发布</string>
    <string name="sc_borrow">租用</string>
    <string name="sc_unshelve">下架</string>
    <string name="sc_restore">归还</string>

    <!-- Captcha -->
    <string name="captcha_title">Captcha</string>
    <string name="captcha_refresh">点击刷新</string>
    <string name="captcha_check_info_0"><Data><![CDATA[请依次点击“<font color="#ff0000"><b>%1$s</b></font>”、“<font color="#ff0000"><b>%2$s</b></font>”、“<font color="#ff0000"><b>%3$s</b></font>”、“<font color="#ff0000"><b>%4$s</b></font>”]]></Data></string>
    <string name="captcha_check_info_1"><Data><![CDATA[请依次点击“<font color="#00ff00"><b>%1$s</b></font>”、“<font color="#ff0000"><b>%2$s</b></font>”、“<font color="#ff0000"><b>%3$s</b></font>”、“<font color="#ff0000"><b>%4$s</b></font>”]]></Data></string>
    <string name="captcha_check_info_2"><Data><![CDATA[请依次点击“<font color="#00ff00"><b>%1$s</b></font>”、“<font color="#00ff00"><b>%2$s</b></font>”、“<font color="#ff0000"><b>%3$s</b></font>”、“<font color="#ff0000"><b>%4$s</b></font>”]]></Data></string>
    <string name="captcha_check_info_3"><Data><![CDATA[请依次点击“<font color="#00ff00"><b>%1$s</b></font>”、“<font color="#00ff00"><b>%2$s</b></font>”、“<font color="#00ff00"><b>%3$s</b></font>”、“<font color="#ff0000"><b>%4$s</b></font>”]]></Data></string>
    <string name="captcha_check_info_4"><Data><![CDATA[请依次点击“<font color="#00ff00"><b>%1$s</b></font>”、“<font color="#00ff00"><b>%2$s</b></font>”、“<font color="#00ff00"><b>%3$s</b></font>”、“<font color="#00ff00"><b>%4$s</b></font>”]]></Data></string>

    <!-- 历史上的今天 -->
    <string name="th_title">历史上的今天</string>
    <string name="th_month">月</string>
    <string name="th_day">日</string>
    <string name="th_year_value">%s年</string>

    <!-- 讯飞语音 -->
    <string name="ft_title">讯飞语音</string>
    <string name="ft_play">播放</string>
    <string name="ft_english">英语</string>
    <string name="ft_french">法语</string>
    <string name="ft_russian">俄语</string>
    <string name="ft_spanish">西班牙语</string>
    <string name="ft_hindi">印地语</string>
    <string name="ft_vietnamese">越南语</string>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="action_settings">设置</string>
    <string name="ft_init_error">讯飞语音初始化失败，错误码：%s</string>
    <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="ft_start">开始播放</string>
    <string name="ft_pause">暂停播放</string>
    <string name="ft_resume">继续播放</string>
    <string name="ft_done">播放完成</string>
    <string name="ft_tts_error">讯飞语音失败，错误码：%s</string>

    <!-- 日历 -->
    <string name="cal_title">日历</string>
    <string name="cal_accountlist_title">日历-账号列表</string>
    <string name="cal_account_title">日历-账号详情</string>
    <string name="cal_eventlist_title">日历-事件列表</string>
    <string name="cal_event_title">日历-事件详情</string>
    <string name="cal_accountname">账号名称</string>
    <string name="cal_accounttype">账号类型</string>
    <string name="cal_eventtitle">事件标题</string>
    <string name="cal_eventdescription">事件描述</string>
    <string name="cal_expand_title">日历-Expand</string>
    <string name="cal_month_title">日历-Month</string>

    <!-- 取中文名 -->
    <string name="cn_title">取中文名</string>
    <string name="cn_surname">姓氏</string>
    <string name="cn_name">名字</string>
    <string name="cn_generate">取名</string>

    <!-- 亲属关系 -->
    <string name="fa_title">亲属关系</string>

    <!-- 字符串排序 -->
    <string name="ss_title">字符串排序</string>

    <!-- 分贝侠 -->
    <string name="dm_title">分贝侠</string>

    <!-- 陀螺仪 -->
    <string name="gyroscope_title">陀螺仪</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    
    <!-- 输入法 -->
    <string name="tw_title">输入法</string>

    <!-- 头像 -->
    <string name="ci_title">头像</string>

    <!-- Demo -->
    <string name="demo_title">演示</string>
    <string name="imei_permission">获取IMEI，需要READ_PHONE_STATE权限。</string>

    <!-- SVG Map -->
    <string name="sm_title">矢量地图</string>
</resources>
