<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bp_time"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgBloodPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ItemTheme"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbBloodPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/bp_bloodpressure" />

                <RadioButton
                    android:id="@+id/rbMedicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bp_medicine" />

                <RadioButton
                    android:id="@+id/rbWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bp_weight" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/llBloodPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rgHand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ItemTheme"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/bp_left" />

                    <RadioButton
                        android:id="@+id/rbRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bp_right" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bp_high"
                    android:theme="@style/ItemTheme">

                    <EditText
                        android:id="@+id/etHigh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bp_low"
                    android:theme="@style/ItemTheme">

                    <EditText
                        android:id="@+id/etLow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bp_pulse"
                    android:theme="@style/ItemTheme">

                    <EditText
                        android:id="@+id/etPulse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/ItemTheme">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bp_device"
                        android:theme="@style/ItemTheme" />

                    <Spinner
                        android:id="@+id/spDevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:theme="@style/ItemTheme" />
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bp_weight"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/ps_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            android:visibility="gone"
            android:layout_weight="1" />

        <Button
            android:text="@string/ps_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="3" />
    </LinearLayout>
</LinearLayout>