<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ID"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sc_user_name"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sc_user_type"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sc_user_income"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilExpend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sc_user_expend"
                android:theme="@style/ItemTheme">

                <EditText
                    android:id="@+id/etExpend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/sc_relate_sharecase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSharecase"
            android:layout_weight="1" />

        <Button
            android:text="@string/sc_relate_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOrder"
            android:layout_weight="1" />

        <Button
            android:text="@string/ps_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="4" />
    </LinearLayout>
</LinearLayout>